# django-afip

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pypirc  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENCE  Pipfile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.builds/: alpine-py311.yml  alpine-py312.yml  docker-py314.yml  py311-alpine.yml  py311-debian.yml  py311.yml  py312+live-alpine.yml  py312+live.yml  py312-alpine.yml  py313-debian.yml  py313-docker.yml  py313.yml  py314.yml  test.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: checks.yml  docs.yml  live.yml  publish.yml  tests.yml
django_afip/: __init__.py  admin.py  apps.py  clients.py  crypto.py  exceptions.py  factories.py  helpers.py  models.py  monkeys.py  parsers.py  pdf.py  serializers.py  signals.py  urls.py  utils.py  views.py
django_afip/fixtures/: clientvatcondition.json  clientvatcondition.yaml  concepttype.json  concepttype.yaml  currencytype.json  currencytype.yaml  documenttype.json  documenttype.yaml  optionaltype.json  optionaltype.yaml  receipttype.json  receipttype.yaml  taxtype.json  taxtype.yaml  vattype.json  vattype.yaml
django_afip/locale/es/LC_MESSAGES/: django.mo  django.po
django_afip/management/commands/: afipmetadata.py  load_client_vat_conditions.py
django_afip/migrations/: 0001_initial.py  0001_squashed_0036_receiptpdf__client_address__blank.py  0002_auto_20150909_1837.py  0002_taxpayerextras.py  0003_issuance_type_length.py  0003_vat_tax_digits.py  0004_auto_20150916_1934.py  0004_storages_and_help_texts.py  0005_auto_20150918_0115.py  0005_flatten_taxpayer_extras.py  0006_auto_20151212_1431.py  0006_delete_taxpayerextras.py  0007_auto_20151212_1754.py  0007_auto_20210409_1641.py  0008_auto_20151212_1820.py  0008_move_taxpayerprofile_to_pos.py  0009_alter_pointofsales_issuance_type.py  0009_auto_20151214_1836.py  0010_alter_authticket_service.py  0010_receiptpdf_pdffile_uploadto.py  0011_caea.py  0011_receipt_entry_vat.py  0011_receiptentry_discount.py  0011_receiptentry_discount_and_more.py  0012_alter_caea_caea_code.py  0012_optionaltype_optional_alter_code_in_generics.py  0012_taxpayer_profile_one_to_one.py  0013_alter_caea_caea_code.py  0013_alter_receiptentry_quantity.py  0013_taxpayer_is_sandboxed.py  0014_alter_pointofsales_blocked_alter_taxpayer_logo.py  0014_no_partially_validated_receiptvalidations.py  0014_remove_caea_service.py  0015_alter_caea_expires_alter_caea_final_date_inform_and_more.py  0015_alter_taxpayer_logo.py  0015_receiptentry__amount_to_quantity.py  0016_auto_20170529_2012.py  0016_clientvatcondition_receipt_client_vat_condition.py  0016_receipt_generated.py  0017_no_null_string_fields.py  (+39 more)
django_afip/static/django_afip/: invoice.css
django_afip/static/receipts/: receipt.css
django_afip/templates/django_afip/: invoice.html
django_afip/templates/receipts/: code_11.html  code_6.html
django_afip/templatetags/: django_afip.py
django_afip/testing/: test.crt  test.key  test.pem  test2.crt  test2.key  test2.pem  test_expired.key
docs/: Makefile  api.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  printables.rst  requirements.txt  security.rst  usage.rst
docs/_ext/: django_models.py
scripts/: dump_metadata.py
testapp/: conftest.py  django_afip  manage.py  settings.py  test.crt  test.key  test2.crt  test2.key  test_expired.crt  test_helpers.py  urls.py  wsgi.py
testapp/testapp/: settings.py  urls.py  wsgi.py
testapp/testapp/testmain/: fixtures.py  mocks.py  test_admin.py  test_tags.py  test_taxpayer.py  tests.py  views.py
testapp/testapp/testmain/tests/: test_admin.py  test_clients.py  test_crypto.py  test_migrations.py  test_models.py  test_parsers.py  test_pdf.py  test_tags.py  test_taxpayer.py  test_views.py  test_webservices.py  testcases.py
testapp/testmain/: views.py
testapp/testmain/templates/receipts/20329642330/pos_9999/: code_6.html
tests/: conftest.py  test_admin.py  test_clients.py  test_crypto.py  test_gentestkey.py  test_management.py  test_migrations.py  test_models.py  test_parsers.py  test_pdf.py  test_tags.py  test_taxpayer.py  test_transaction_protection.py  test_vattype.py  test_views.py  test_webservices.py
