[project]
name = "django-afip"
authors = [
    {name = "Hugo Osvaldo Barrera", email = "hugo@whynothugo.nl"},
]
description = "AFIP integration for django"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["argentina", "afip", "wsdl"]
license = "ISC"
license-files = ["LICENCE"]
classifiers = [
  "Development Status :: 6 - Mature",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "cryptography>=3.2,<47",
  "django>=4.2,<5.3",
  "django_renderpdf>=6.0.0,<7.0.0",
  "lxml>=3.4.4",
  "pyopenssl>=16.2.0",
  "setuptools-git>=1.1",
  "wheel>=0.24.0",
  "zeep>=1.1.0,<5.0.0",
  "qrcode[pil]>=6.1,<9.0",
  "pyyaml>=5.3.1,<7.0.0",
  # zeep depends on requests, but these specific version are incompatible.
  # See: https://github.com/WhyNotHugo/django-afip/issues/211
  "requests!=2.32.0,!=2.32.1,!=2.32.2",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
  "Sphinx>=3.4.0", # See: https://github.com/edoburu/sphinxcontrib-django/issues/49
  "sphinx_rtd_theme",
  "sphinxcontrib_django",
  "dj_database_url",
]
postgres = [
  "psycopg2",
]
mysql = [
  "mysqlclient",
]
factories = [
  "factory-boy",
]
dev = [
  "coverage",
  "dj_database_url",
  "django-stubs[compatible-mypy]",
  "factory-boy",
  "freezegun",
  "pytest-cov",
  "pytest-django",
  "types-backports",
  "types-freezegun",
  "types-pyOpenSSL",
  "types-pytz",
  "types-requests"
]

[project.urls]
homepage = "https://github.com/WhyNotHugo/django-afip"
documentation = "https://django-afip.readthedocs.io/"
issues = "https://github.com/WhyNotHugo/django-afip/issues"
changelog = "https://django-afip.readthedocs.io/en/latest/changelog.html"
donate = "https://liberapay.com/WhyNotHugo/"
funding = "https://github.com/sponsors/WhyNotHugo"

[tool.setuptools.packages.find]
include = ["django_afip*"]

[build-system]
requires = ["setuptools>=77", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "django_afip/version.py"
version_scheme = "no-guess-dev"

[tool.pytest.ini_options]
addopts = """
  --reuse-db
  --cov=django_afip
  --cov-report=term-missing:skip-covered
  --no-cov-on-fail
  --color=yes
"""
markers = [
  "live: Tests done with the live test environment."
]
DJANGO_SETTINGS_MODULE = "testapp.settings"

[tool.mypy]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "testapp.settings"

[tool.coverage.run]
source = ["django_afip"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "B",
    "C4",
    "DJ",
    "E",
    "F",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    # "N",
    "PGH",
    "PIE",
    "PLE",
    "PT",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "TCH",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
  "ANN002",  # Annotations for *args
  "ANN003",  # Annotations for **kwargs
]

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
# Fails with auto-generated migrations. Unsolvable contradiction between ruff and mypy.
# This likely needs to be addressed in Django itself (either use an immutable
# type or annotate these fields as ClassVar)
"django_afip/migrations/0*.py"= ["RUF012"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
]
